# genpipe

./: .gitignore  main.py  mix.py  pyproject.toml
genpipe/: distill.py  merge.py  schema.py  transform.py  utils.py
