[project]
name = "genpipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.4.1",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "retry>=0.9.2",
    "tqdm>=4.67.1",
]
